<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_undo"
        android:title="@string/action_undo"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_revert" />
    <item
        android:id="@+id/action_redo"
        android:title="@string/action_redo"
        android:orderInCategory="101"
        android:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_rotate" />
    <item
        android:id="@+id/action_clear"
        android:title="@string/action_clear"
        android:orderInCategory="102"
        android:showAsAction="ifRoom"
        android:icon="@android:drawable/ic_menu_delete" />
    <item
        android:id="@+id/action_export_latex"
        android:title="@string/action_export_latex"
        android:actionProviderClass="android.widget.ShareActionProvider"
        android:orderInCategory="103"
        android:showAsAction="never" />
    <item
        android:id="@+id/action_export_image"
        android:title="@string/action_export_image"
        android:actionProviderClass="android.widget.ShareActionProvider"
        android:orderInCategory="104"
        android:showAsAction="never" />
    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        android:orderInCategory="105"
        android:showAsAction="never" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="106"
        android:showAsAction="never" />
    <item
        android:id="@+id/action_help"
        android:title="@string/action_help"
        android:orderInCategory="107"
        android:showAsAction="never" />
</menu>
